--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,10 @@ body{
 #contariner h1{
     font-size: 20px;
 }
+
+#footer{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 00.5em;
+}
